--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="author" content="Ryan DECIAN">
+  <meta name="description" content="Compte a rebours Noël">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=devise-width, initial-scale=1">
+  <title>ChristmasDay</title>
+  <link rel="shortcut icon" href="./src/assets/Icon/icon.ico" type="image/x-icon">
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
